# Terrain-generator

./: .gitignore  CMakeLists.txt  Common.cmake  README.md  install.bat  vcpkg.json
MathLibrary/: CMakeLists.txt
Resources/Shaders/: cube.frag  cube.vert  plane.frag  plane.vert  triangle.frag  triangle.vert
TerrainGenerator/: CMakeLists.txt
TerrainGenerator/include/: Camera.h  Color3.h  Cube.h  MathHelper.h  PerlinNoise.h  Shader.h  Texture.h  Triangle.h  Utils.h  plane.h
TerrainGenerator/include/MVP/: Model.h  Presenter.h  Signal.h  View.h
TerrainGenerator/src/: Camera.cpp  PerlinNoise.cpp  Shader.cpp  main.cpp  plane.cpp
